--- a/manuscripts/24-jb-relid-flourish-long/24-jb-relid-flourish-long.qmd
+++ b/manuscripts/24-jb-relid-flourish-long/24-jb-relid-flourish-long.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Does Religious Identification Affect Multi-Dimensional Flourishing? Evidence from a Five Wave Panel Study In New Zealand"
 abstract: |
-  **Question**: Does religious identificaton affect multi-dimensional well-being?  If so, which aspects of well-being, and by how much? 
+  **Question**: Does religious identification affect multi-dimensional well-being?  If so, which aspects of well-being, and by how much? 
 
   **Method**: We analyse five waves of cohort panel data from the New Zealand Attitudes and Values Study (N = 46,672) to estimate the causal effects of two treatment regimes for religious disaffiliation and obtain causal contrasts on the additive scale.
   
@@ -989,44 +989,26 @@ outcome_vars_all <- c(
 
 ## Introduction
 
-
-A central question in the scientific study of religion is whether religion fosters health, and by how much [citations]. However, the question as stated, is unclear. For 
-
-Here, to obtain causal inferences from time-series data, we leverage comprehensive panel data from `r n_participants` participants in the New Zealand Attitudes and Values Study from 2018-2021 and quantify the effects of clearly defined interventions in reliousity across the population of New Zealanders assessed on XXX outcome domains of well-being. We obtain causal inferences by contrasting inferred population averages under different sequential treatment regimes [@haneuse2013estimation; @diaz2023lmtp; @díaz2021; @hoffman2023]. 
-
-For each outcome domain we estimate the following quantities, controlling for baseline religious identification in wave 0 (the start of study), and measuring well-being at one-year following the final treatment (wave 4). We define "secular" to mean not being identified with religion. We define "highly religious" to mean fully identified with religion.
-
-1. **Continuous Secular Treatment (Secular):** what would be the population average well-being if everyone started out secular at time 1, and remained secular in time 2 and 3?
-
-2. **Continuous Religious Treatment (Religious)**:  what would be the population average well-being if everyone started out highly religious at time 1, and remained highly religious in time 2 and 3?
-
-3. **Convert to Secularism (Done):** what would be the population average well-being if everyone started out religious at time 1, but became secular in time 2 and 3?
-
-4. **Convert to Religious (Convert):** what would be the population average well-being if everyone started out secul;ar at time 1, but became highly religious in time 2 and 3?
+A central question in the scientific study of religion is whether religion fosters health. We first need to make this question precise.
 
 
-These
+According to the counterfactual model of causal inference, we obtain causal inferences for a stated target population by specifying contrasts between well-defined treatments on measurable outcomes for which treatment-assignment is "as good as random" [@robins1986]. In randomised controlled experiments, investigators typically use eligibility criteria to define the target population. For example, to estimate the effect of a medication on blood pressure, we might restrict the target population to participants with hypertension. The treatments are defined by experimental protocols, such as "administer $\mu$ of the active medication for four weeks" versus "administer $\mu$ of a placebo for four weeks" and measure blood pressure at the end of the four weeks. Furthermore in experimental designs, we randomise participants sampled from the target population to treatment-assignment, ensuring that there are no common causes of the treatments received and the outcome measured at the end of study. In the ideal of a perfectly conducted a randomised controlled experiment, we may interpret the associations between treatment and outcome as the average effect of the treatment for the target population. That is, the effect is contrast between outcomes (on some scale of contrast, such as a difference or ratio) under two different treatment regimes specified by the experimental protocol were everyone in the target population to receive the two different treatments. Of course, even if everyone in the target population could be recruited into a study, it is conceptually impossible for everyone to receive *each* treatment to be compared, because receiving one treatment precludes receiving the other. However, because investigators have randomised participants, the average effects in the treatments are asymptotically unbiased, and we may project causal contrasts as holding as if everyone in the target population were exposed to each of the treatment arms to be compared. 
 
-These questions simulates a hypothetical experiment with random assignment to regular or non-attendance, emulating the scientifically interesting all/none contrast that is common in experimental designs [@hernán2016].
+We call data that are not collected in experimental settings "observational" or 'real-world data'. As most social scientists are aware, a major challenge of observational data is that "the treatments" received are not randomised, and so we cannot naively interpret the associations between treatment and outcome as the average effect of the treatment for the target population. Yet even before addressing the challenges of balancing confounders (the conditional exchangeability assumption) we must clearly state that treatments we wish to compare, the scale of contrast, and the target population. Similar to an experimental protocol, we must clarify the different interventions on "religion" over time to be compared, the time-frames at which this interventions are considered, the outcomes of interest, measured at the end of treatment regimes, the scale of causal contrasts, and the target population. Beyond ensuring conditional randomisation, we must also satisfy additional assumptions considered below. 
 
-Although the set of causal contrasts analysts might consider is unbounded, those we have selected address these specific scientific and policy interests.
-
-Note that our approach does not focus on testing specific hypotheses; instead, we aim to accurately and consistently compute our pre-specified causal contrasts [@hernan2024stating].
-
+Here, we leverage comprehensive panel data from `r n_participants` participants in the New Zealand Attitudes and Values Study `r all_waves` on four clearly defined interventions on religious identification levels across the population of New Zealanders assessed on **XXX** outcome domains of well-being. We obtain causal inferences by contrasting inferred population averages for the sequential treatment regimes and obtaining causal contrasts of these [@haneuse2013estimation; @diaz2023lmtp; @díaz2021; @hoffman2023]. We next consider additional assumptions required for causal inference with observational data, before turning to statistical estimation of the targeted quantities from data -- needed for quantitative estimation of point estimates and uncertainties -- and sensitivity analysis, needed because it is unrealistic to assume that the strong assumptions for causal inferences with observational data are ever satisfied. 
 
 ## Method
 
 
 ### Sample
 
-
-Data were collected as part of the New Zealand Attitudes and Values Study (NZAVS), an annual longitudinal national probability panel assessing New Zealand residents’ social attitudes, personality, ideology, and health outcomes. The panel began in 2009 and has since expanded to include over fifty researchers, with responses from `r n_total` participants to date. The study operates independently of political or corporate funding and is based at a university. Data summaries for all measures used in this study are provided in **Supplemental Appendices B-D**. For more information about the NZAVS, see: [OSF.IO/75SNB](https://doi.org/10.17605/OSF.IO/75SNB). The data for this study were obtained from the NZAVS waves 10-12 cohort, covering 2018-2021. Although this cohort is a national probability sample, we weighted responses by New Zealand 2018 Census estimates (age, gender, ethnicity) to produce results that better reflect the New Zealand population. Information on these survey weights can be found in the NZAVS documentation, see: [OSF.IO/75SNB](https://doi.org/10.17605/OSF.IO/75SNB).
+Data were collected as part of the New Zealand Attitudes and Values Study (NZAVS), an annual national probability panel study that assesses a broad bandwidth of measures for social attitudes, personality, ideology, and health outcomes, including measures of religious belief, behaviour, and identity. The panel began in 2009 and has since expanded to include over fifty researchers, with responses from `r n_total` participants to date. The study operates independently of political or corporate funding and is based at a university. Data summaries for all measures used in this study are provided in **Supplemental Appendices B-D**. For more information about the New Zealand Attitudes and Values Study, see: [OSF.IO/75SNB](https://doi.org/10.17605/OSF.IO/75SNB). The data for the present study were obtained from the `r all_waves`. Although this cohort were sampled randomly from the New Zealand Electoral Roll, we weighted responses by New Zealand 2018 Census estimates (age, gender, ethnicity) to produce results that better reflect the New Zealand population. Information on these survey weights can be found in the NZAVS documentation, see: [OSF.IO/75SNB](https://doi.org/10.17605/OSF.IO/75SNB).
 
 
 ### Treatment Indicator
 
-
-We assessed religious service attendance using the following question:
+We assessed religious identification levels using the following question:
 
 ```{r}
 #| eval: false
@@ -1042,11 +1024,10 @@ cat(exposure_measure)
 ```
 
 
-Responses were rounded to the nearest whole number. Because few participants reported attending more than eight times, we capped responses above eight at eight (see Appendix B, variable `religion_church_round`). In the regular church service condition, we did not intervene on responses greater than four to reduce computational burdens during estimation.
 
+### Phenotype of Well-being
 
-### Outcomes
-
+Rather than cherry-picking measures of well-being that risk presenting a fragmented picture, we adopted an "outcome-wide" design for measuring well-being [@vanderweele2020]. 
 
 ```{r}
 #| eval: false
@@ -1061,25 +1042,42 @@ cat(outcome_measures)
 
 ```
 
-### Measures of Well-being
+
 
 ### Causal Contrasts
 
+For each outcome domain we estimate the following quantities, controlling for baseline religious identification in wave 0 (the start of study), and measuring well-being at one-year following the final treatment (wave 4). We define "secular" to mean not being identified with religion. We define "highly religious" to mean fully identified with religion.
 
-As mentioned we define four causal intervention, yeilding six causal contrasts. 
+1. **Continuous Secular Treatment (Secular):** what would be the population average well-being if everyone started out secular at time 1, and remained secular in time 2 and 3?
+
+2. **Continuous Religious Treatment (Religious)**:  what would be the population average well-being if everyone started out highly religious at time 1, and remained highly religious in time 2 and 3?
+
+3. **Convert to Secularism (Done):** what would be the population average well-being if everyone started out religious at time 1, but became secular in time 2 and 3?
+
+4. **Convert to Religious (Convert):** what would be the population average well-being if everyone started out secular at time 1, but became highly religious in time 2 and 3?
+
+[VISUALS HERE]
+
+These regimes emulates a hypothetical four-arm randomised controlled trial  with random assignment to conditions different states of religious identification over clearly defined intervals, without outcomes measured after the final interval [@hernán2016]. 
+
+Clearly, the set of causal contrasts analysts might consider is unbounded. We might select treatment regimes over different intervals, or perhaps only one interval. We might select different indicators of "religious identity" or "secular identity". We might select different outcomes, or perhaps only one outcome. We might select a target population other than New Zealanders. 
+
+Having stated the causal quantities of interest, we consider whether the assumptions required to obtain these quantities from data are satisfied. If so, we obtain statistical estimates for these quantities by contrasting the expected population averages under each sequential treatment regime.
+
+Note that our approach does not focus on testing specific hypotheses; instead, we aim to accurately and consistently compute our pre-specified causal contrasts [@hernan2024stating].
 
 
 ### Causal Assumptions
 
-To interpret our statistical models causally requires the following assumptions.
+We do not, of course, conduct a randomised controlled trial.To interpret our statistical models causally requires the following assumptions:
 
-1.	Causal Consistency: potential outcomes correspond to the observed outcomes under the treatments in our data. We assume that conditional on measured covariates, potential outcomes do not depend on how the treatment was administered [@vanderweele2009; @vanderweele2013].
+1.	Conditional Exchangeability: conditional on observed covariates, treatment assignment is independent of the potential outcomes being compared (i.e. there is no unmeasured confounding) [@hernan2024WHATIF; @chatton2020].
 
-
-2.	Conditional Exchangability: conditional on observed covariates, treatment assignment is independent of the potential outcomes being compared (i.e. there is no unmeasured confounding) [@hernan2024WHATIF; @chatton2020].
+2.	Causal Consistency: we may obtain counterfactual outcomes for the target population because the observed outcomes under the treatments in our data. We assume that conditional on measured covariates, potential outcomes do not depend on how the treatment was administered [@vanderweele2009; @vanderweele2013].
 
 
 3.	Positivity: Each individual has a non-zero probability of receiving each treatment level, regardless of their covariate values. We evaluated this by examining changes in religious service attendance from baseline to the treatment wave [@westreich2010].
+
 
 
 ### Target Population
