--- a/manuscripts/24-usman-mus-diversity/24-usman-msd.qmd
+++ b/manuscripts/24-usman-mus-diversity/24-usman-msd.qmd
@@ -96,12 +96,16 @@ push_mods <- here::here("/Users/joseph/Library/CloudStorage/Dropbox-v-project/da
 # name_exposure = "muslim_binary"
 
 # table for muslim on religion
-table_religion_kbl <- here_read("table_religion_kbl")
 table_religion <- here_read("table_religion")
 table_demographics <- here_read("table_demographics")
-table_demographics_kbl <- here_read("table_demographics_kbl")
-table_wellbeing_kbl <- here_read("table_wellbeing_kbl")
 table_wellbeing <- here_read("table_wellbeing")
+
+# table religion
+table_religion_mus <- here_read("table_religion")
+table_demographics_mus <- here_read("table_demographics")
+table_wellbeing_mus <- here_read("table_wellbeing")
+
+
 prop_miss_case <- here_read("prop_miss_case")
 results_religion <- here_read_qs("results_religion", push_mods)
 results_life <- here_read_qs("results_life", push_mods)
@@ -199,14 +203,11 @@ To mitigate bias from missing data, we employed the `ppm` algorithm from the `mi
 
 ## Results 
 
-Demographic data are presented in @tab-demography
+Demographic data stratified by "Muslim"/"Not Muslim" are presented in @tbl-demography. @tbl-sample presents demographic data stratified by religious denominations.
 
 
-
-{{< pagebreak >}}
-
+::: {#tbl-demography}
 \begin{landscape}
-
 ```{r, results = 'asis'}
 library(kableExtra)
 # as.data.frame(table_demographics) |>
@@ -223,24 +224,103 @@ library(kableExtra)
 #     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
 #   )
 
-as.data.frame(table_demographics) |>
+as.data.frame(table_demographics_mus) |>
   kbl(
     format = "latex",
     booktabs = TRUE,
-    longtable = TRUE,
-    caption = "Demographic Data Overview"
+    longtable = TRUE#,
+   # caption = "Demographic Data Overview"
   ) |>
   kable_styling(
-    font_size = 5,
+    font_size = 6,
     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
   ) |>
   kable_styling(latex_options = "scale_down")
 ```
 \end{landscape}
+Demographic statistics by "Muslim
+:::
+{{< pagebreak >}}
 
+@tbl-religion presents sample response statistics for religious reponses.
+
+::: {#tbl-religion}
+\begin{landscape}
+```{r, results = 'asis'}
+library(kableExtra)
+# as.data.frame(table_demographics) |>
+#   kbl(format="latex", booktabs = TRUE) |> 
+#   kable_styling(font_size = 8)
+# as.data.frame(table_demographics) |>
+#   kbl(
+#     format = "latex",
+#     booktabs = TRUE,
+#     longtable = TRUE  # Enable longtable format
+#   ) |>
+#   kable_styling(
+#     font_size = 8,
+#     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
+#   )
+
+as.data.frame(table_demographics_mus) |>
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    longtable = TRUE#,
+   # caption = "Demographic Data Overview"
+  ) |>
+  kable_styling(
+    font_size = 6,
+    latex_options = c("striped", "hold_position", "repeat_header", "longtable")
+  ) |>
+  kable_styling(latex_options = "scale_down")
+```
+\end{landscape}
+Sample Religion Statistics.
+:::
+{{< pagebreak >}}
 
 
 {{< pagebreak >}}
+
+@tbl-religion presents sample response statistics for religious reponses.
+
+::: {#tbl-life}
+\begin{landscape}
+```{r, results = 'asis'}
+library(kableExtra)
+# as.data.frame(table_demographics) |>
+#   kbl(format="latex", booktabs = TRUE) |> 
+#   kable_styling(font_size = 8)
+# as.data.frame(table_demographics) |>
+#   kbl(
+#     format = "latex",
+#     booktabs = TRUE,
+#     longtable = TRUE  # Enable longtable format
+#   ) |>
+#   kable_styling(
+#     font_size = 8,
+#     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
+#   )
+table_wellbeing
+as.data.frame(table_demographics_mus) |>
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    longtable = TRUE#,
+   # caption = "Demographic Data Overview"
+  ) |>
+  kable_styling(
+    font_size = 6,
+    latex_options = c("striped", "hold_position", "repeat_header", "longtable")
+  ) |>
+  kable_styling(latex_options = "scale_down")
+```
+\end{landscape}
+Sample Religion Statistics.
+:::
+{{< pagebreak >}}
+
 
 ### Ethics
 
@@ -270,7 +350,48 @@ The New Zealand Attitudes and Values Study is supported by a grant from the Temp
 
 ## Appendix A: Sample Descriptive Statistics {#appendix-a}
 
-@tbl-baseline presents descriptive statistics for the sample.
+@tbl-sample presents descriptive statistics for the sample stratified by religious denominations.
+
+{{< pagebreak >}}
+
+
+::: {#tbl-sample}
+\begin{landscape}
+```{r, results = 'asis'}
+library(kableExtra)
+# as.data.frame(table_demographics) |>
+#   kbl(format="latex", booktabs = TRUE) |> 
+#   kable_styling(font_size = 8)
+# as.data.frame(table_demographics) |>
+#   kbl(
+#     format = "latex",
+#     booktabs = TRUE,
+#     longtable = TRUE  # Enable longtable format
+#   ) |>
+#   kable_styling(
+#     font_size = 8,
+#     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
+#   )
+
+as.data.frame(table_demographics) |>
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    longtable = TRUE#,
+   # caption = "Demographic Data Overview"
+  ) |>
+  kable_styling(
+    font_size = 6,
+    latex_options = c("striped", "hold_position", "repeat_header", "longtable")
+  ) |>
+  kable_styling(latex_options = "scale_down")
+```
+\end{landscape}
+Sample statistics.
+:::
+{{< pagebreak >}}
+
+
 
 
 
