--- a/manuscripts/24-usman-mus-diversity/24-usman-msd.qmd
+++ b/manuscripts/24-usman-mus-diversity/24-usman-msd.qmd
@@ -7,12 +7,15 @@ author:
   - name: M. Usman Afzali
     affiliation: University of Otago New Zealand
     orcid: 0000-0003-3169-6576 
-  - name: Kumar Yogeswaaran
-    affiliation: University of Canterbury New Zealand
-    orcid: 0000-0002-1978-5077
+  - name: Aarif Rasheed
+    affiliation:  University of Otago New Zealand
+    orcid: 0000-0000-0000-0000
   - name: Chris G. Sibley
     affiliation: School of Psychology, University of Auckland, New Zealand
     orcid: 0000-0002-4064-8800
+  - name: Kumar Yogeswaaran
+    affiliation: University of Canterbury New Zealand
+    orcid: 0000-0002-1978-5077
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
     orcid: 0000-0002-5861-2056
@@ -129,6 +132,58 @@ set.seed(123)
 prop_miss_case<- here_read("prop_miss_case")
 
 
+
+# read models
+results_religion<- here_read_qs("results_religion", push_mods)
+results_discrim <- here_read_qs("results_discrim", push_mods)
+results_life <- here_read_qs("results_life", push_mods)
+results_psych<- here_read_qs("results_psych", push_mods)
+results_social<- here_read_qs("results_social", push_mods)
+
+
+# access individual plots Religion
+results_religion$plots$`Religious Identification Level`
+results_religion$plots$`Spiritual Identification Level`
+results_religion$plots$`Belief in God` + scale_y_continuous(limits = c(-0,1.1))
+results_religion$plots$`Belief in Spirit`+ scale_y_continuous(limits = c(-0,1.1))
+
+results_religion$plots$`Monthly Religious Service Attendance`+ scale_y_continuous(limits = c(0,35))
+results_religion$plots$`Weekly Scripture`  + scale_y_continuous(limits = c(-.4,35))
+results_religion$plots$`Weekly Prayer`  + scale_y_continuous(limits = c(-.4,30))
+
+# access individual plots discrimination
+
+results_discrim$plots$`Perceived Ethnic Discrimination`
+results_discrim$plots$`Perceived Religious Discrimination`
+results_discrim$plots$`Perceived Gender Discrimination`
+results_discrim$plots$`Perceived Age Discrimination`
+
+# access individual plots psychological wellbeing
+results_life$plots$Gratitude
+results_life$plots$`Life Satisfaction`
+results_life$plots$`Meaning: Purpose`
+results_life$plots$`Meaning: Sense`
+
+
+
+# access individual plots life-reflective wellbeing
+results_psych$plots$Anxiety+ scale_y_continuous(limits = c(-.5,5))
+results_psych$plots$Depression + scale_y_continuous(limits = c(-.5,5))
+results_psych$plots$Fatigue+ scale_y_continuous(limits = c(-.5,5))
+results_psych$plots$Rumination+ scale_y_continuous(limits = c(-.5,5))
+
+results_social$plots$`Belonging - Acceptance`
+results_social$plots$`Belonging - Shared Beliefs`
+results_social$plots$`Belonging - Outsider (Reversed)`
+results_social$plots$`Neighbourhood Community`
+results_social$plots$`Support - Help Availability`
+results_social$plots$`Support - No Guidance (Reversed)`
+results_social$plots$`Support - Someone to Turn To`
+
+
+
+
+
 # read data (use 01 script to data wrangle)
 # dat_long_imputed_bounds_ordinal <- margot::here_read_qs("dat_long_imputed_bounds_ordinal", push_mods)
 
@@ -203,7 +258,7 @@ To mitigate bias from missing data, we employed the `ppm` algorithm from the `mi
 
 ## Results 
 
-Demographic data stratified by "Muslim"/"Not Muslim" are presented in @tbl-demography. @tbl-sample presents demographic data stratified by religious denominations.
+Demographic data religious denominations are presented in @tbl-demography. 
 
 
 ::: {#tbl-demography}
@@ -224,7 +279,7 @@ library(kableExtra)
 #     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
 #   )
 
-as.data.frame(table_demographics_mus) |>
+as.data.frame(table_demographics) |>
   kbl(
     format = "latex",
     booktabs = TRUE,
@@ -242,48 +297,10 @@ Demographic statistics by "Muslim
 :::
 {{< pagebreak >}}
 
-@tbl-religion presents sample response statistics for religious reponses.
-
-::: {#tbl-religion}
-\begin{landscape}
-```{r, results = 'asis'}
-library(kableExtra)
-# as.data.frame(table_demographics) |>
-#   kbl(format="latex", booktabs = TRUE) |> 
-#   kable_styling(font_size = 8)
-# as.data.frame(table_demographics) |>
-#   kbl(
-#     format = "latex",
-#     booktabs = TRUE,
-#     longtable = TRUE  # Enable longtable format
-#   ) |>
-#   kable_styling(
-#     font_size = 8,
-#     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
-#   )
-
-as.data.frame(table_demographics_mus) |>
-  kbl(
-    format = "latex",
-    booktabs = TRUE,
-    longtable = TRUE#,
-   # caption = "Demographic Data Overview"
-  ) |>
-  kable_styling(
-    font_size = 6,
-    latex_options = c("striped", "hold_position", "repeat_header", "longtable")
-  ) |>
-  kable_styling(latex_options = "scale_down")
-```
-\end{landscape}
-Sample Religion Statistics.
-:::
-{{< pagebreak >}}
-
 
 {{< pagebreak >}}
 
-@tbl-religion presents sample response statistics for religious reponses.
+@tbl-life presents sample response-statistics for multi-dimensional well-being.
 
 ::: {#tbl-life}
 \begin{landscape}
@@ -303,7 +320,7 @@ library(kableExtra)
 #     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
 #   )
 table_wellbeing
-as.data.frame(table_demographics_mus) |>
+as.data.frame(table_wellbeing) |>
   kbl(
     format = "latex",
     booktabs = TRUE,
@@ -320,6 +337,46 @@ as.data.frame(table_demographics_mus) |>
 Sample Religion Statistics.
 :::
 {{< pagebreak >}}
+
+
+@tbl-religion presents sample response-statistics for religious beliefs and practices.
+
+::: {#tbl-religion}
+\begin{landscape}
+```{r, results = 'asis'}
+library(kableExtra)
+# as.data.frame(table_demographics) |>
+#   kbl(format="latex", booktabs = TRUE) |> 
+#   kable_styling(font_size = 8)
+# as.data.frame(table_demographics) |>
+#   kbl(
+#     format = "latex",
+#     booktabs = TRUE,
+#     longtable = TRUE  # Enable longtable format
+#   ) |>
+#   kable_styling(
+#     font_size = 8,
+#     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
+#   )
+
+as.data.frame(table_religion) |>
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    longtable = TRUE#,
+   # caption = "Demographic Data Overview"
+  ) |>
+  kable_styling(
+    font_size = 6,
+    latex_options = c("striped", "hold_position", "repeat_header", "longtable")
+  ) |>
+  kable_styling(latex_options = "scale_down")
+```
+\end{landscape}
+Sample Religion Statistics.
+:::
+{{< pagebreak >}}
+
 
 
 ### Ethics
